--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,15 +3,15 @@ import { db, Meals } from "astro:db";
 
 const meals = await db.select().from(Meals);
 
-if (Astro.request.method === "POST") {
-  // parse form data
-  const formData = await Astro.request.formData();
-  const content = formData.get("name");
-  if (typeof name === "string") {
-    // insert form data into the Comment table
-    await db.insert(Meals).values({ content });
-  }
-}
+// if (Astro.request.method === "POST") {
+//   // parse form data
+//   const formData = await Astro.request.formData();
+//   const content = formData.get("name");
+//   if (typeof name === "string") {
+//     // insert form data into the Comment table
+//     await db.insert(Meals).values({ content });
+//   }
+// }
 
 // render the new list of comments on each request
 const comments = await db.select().from(Meals);
