--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,13 +34,11 @@ const comments = await db.select().from(Foods);
         </article>
       ))
     }
-    <form method="POST" style="display: grid">
+    <!-- <form method="POST" style="display: grid">
       <label for="meal_name">Meal name</label>
       <input id="meal_name" name="name" />
 
       <button type="submit">Submit</button>
-    </form>
-
-    <!--render `comments`-->
+    </form> -->
   </body>
 </html>
