--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,12 +14,10 @@ interface Meal {
 const now = new Date();
 const currentDayOfWeek = now.getDay();
 const startOfCurrentWeek = new Date(
-  now.setDate(
-    now.getDate() - currentDayOfWeek + (currentDayOfWeek === 0 ? -6 : 1)
-  )
+  now.setDate(now.getDate() - currentDayOfWeek)
 );
 const endOfCurrentWeek = new Date(
-  now.setDate(now.getDate() - currentDayOfWeek + 7)
+  now.setDate(now.getDate() - currentDayOfWeek + 6)
 );
 
 const meals = await db
@@ -56,11 +54,12 @@ const mealsByDay: Record<string, Meal[]> = meals.reduce(
           month: "long",
           day: "numeric",
         };
-        const dayOfWeek = new Date(day);
+        const dayOfWeek = new Date(day + "T00:00:00"); // Add time to ensure correct date
         const formattedDayOfWeek = dayOfWeek.toLocaleDateString(
           "en-US",
           options
         );
+
         return (
           <section class="day">
             <h2>{formattedDayOfWeek}</h2>
