--- a/src/pages/add-meals.astro
+++ b/src/pages/add-meals.astro
@@ -1,71 +1,62 @@
 ---
 import DefaultLayout from "../layouts/DefaultLayout.astro";
+import { db, Meals } from "astro:db";
 
-import { db } from "astro:db";
-
-//
-
-// if (Astro.request.method === "POST") {
-//   // parse form data
-//   const data = await Astro.request.formData();
-//   const foodName = data.get("name");
-//   const labelImage = data.get("label_image");
-//   try {
-//     if (typeof foodName === "string" || typeof labelImage === "string") {
-//       // insert form data into the Comment table
-//       await db
-//         .insert(Foods)
-//         .values({ name: foodName, macrofactor_url: labelImage });
-//     }
-//   } catch (error) {
-//     if (error instanceof Error) {
-//       console.error(error.message);
-//     }
-//   }
-// }
-
-// const foods = await db.select().from(Foods);
+if (Astro.request.method === "POST") {
+  // parse form data
+  const data = await Astro.request.formData();
+  const mealName = data.get("name");
+  const mealType = data.get("meal_type");
+  const mfUrl = data.get("macrofactor_url");
+  const day = data.get("day");
+  const notes = data.get("notes");
+  try {
+    if (
+      typeof mealName === "string" ||
+      typeof mealType === "string" ||
+      typeof day === "string" ||
+      typeof notes === "string" ||
+      typeof mfUrl === "string"
+    ) {
+      // insert form data into the Comment table
+      await db
+        .insert(Meals)
+        .values({
+          name: mealName,
+          macrofactor_url: mfUrl,
+          day: new Date(day),
+          notes,
+          meal_type: mealType,
+        });
+    }
+  } catch (error) {
+    if (error instanceof Error) {
+      console.error(error.message);
+    }
+  }
+}
 ---
 
 <DefaultLayout title="Add new items">
-  <h2>Add new food item</h2>
-  <form method="POST" style="display: grid">
-    <label for="food_name">Food name</label>
-    <input id="food_name" name="name" />
-
-    <button type="submit">Submit</button>
-  </form>
-
   <h2>Add new meal</h2>
   <form method="POST" style="display: grid">
-    <label for="label_image">Date</label>
-    <input id="label_image" name="label_image" />
+    <label for="date">Date</label>
+    <input id="date" name="date" type="date" />
 
-    <label for="label_image">Meal type</label>
-    <select id="label_image" name="label_image"></select>
+    <label for="meal-name">Meal name</label>
+    <input id="meal-name" name="name" />
 
-    <label for="label_image">Meal name</label>
-    <input id="label_image" name="label_image" />
+    <label for="meal-type">Meal type</label>
+    <select id="meal-type">
+      <option value="Lunch">Lunch</option>
+      <option value="Dinner">Dinner</option>
+    </select>
 
-    <label for="label_image">Select food</label>
-    <select id="label_image" name="label_image"></select>
+    <label for="mf-link">MacroFactor link</label>
+    <input id="mf-link" name="mf-link" />
 
-    <label for="label_image">Katie Quantity</label>
-    <input id="label_image" name="label_image" />
-
-    <label for="label_image">Taran Quantity</label>
-    <input id="label_image" name="label_image" />
-
-    <button>Add another food item</button>
-
-    <label for="label_image">Select food</label>
-    <select id="label_image" name="label_image"></select>
-
-    <label for="label_image">Katie Quantity</label>
-    <input id="label_image" name="label_image" />
-
-    <label for="label_image">Taran Quantity</label>
-    <input id="label_image" name="label_image" />
+    <label for="meal-notes">Notes</label>
+    <textarea id="meal-notes" name="notes"></textarea>
 
     <button type="submit">Submit</button>
   </form>
