--- a/src/pages/add-meals.astro
+++ b/src/pages/add-meals.astro
@@ -17,7 +17,7 @@ if (Astro.request.method === "POST") {
       typeof mealType === "string" ||
       typeof day === "string" ||
       typeof notes === "string" ||
-      typeof mfUrl === "string" ||
+      typeof mfUrl === "string"
       // typeof dayOfWeek === "string"
     ) {
       // insert form data into the Comment table
